--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \"src/**/*.ts\"",
-    "lint": "tslint -p tsconfig.json",
     "test": "jest --config jestconfig.json",
-    "build": "npm run lint && npm run format && tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +13,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "jest": "^26.6.3",
-    "prettier": "^2.1.2",
     "ts-jest": "^26.4.4",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.5"
   },
   "files": [
