--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "path-generator",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --config jestconfig.json",
-    "build": "tsc"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
-    "typescript": "^4.0.5"
-  },
-  "files": [
-    "lib /**/*"
-  ]
+	"name": "path-generator",
+	"version": "1.0.0",
+	"description": "A easy motion profile path generator",
+	"main": "lib/index.js",
+	"types": "lib/index.d.ts",
+	"author": "Matan Steinmetz <matanabc@gamil.com>",
+	"repository": "https://github.com/matanabc/path-generator.git",
+	"license": "ISC",
+	"keywords": [
+		"frc",
+		"pathgenerator",
+		"motion profile"
+	],
+	"scripts": {
+		"test": "jest --config jestconfig.json",
+		"build": "tsc",
+		"prepare": "npm run build",
+		"prepublishOnly": "npm test",
+		"version": "git add -A src",
+		"postversion": "git push && git push --tags"
+	},
+	"devDependencies": {
+		"@types/jest": "^26.0.15",
+		"jest": "^26.6.3",
+		"ts-jest": "^26.4.4",
+		"typescript": "^4.0.5"
+	},
+	"files": [
+		"lib /**/*"
+	]
 }
